cotoami_desktop/ui/assets/css/app/_timeline.scss
section.timeline {
  margin-top: 20px;

  >header.tools {
    position: relative;
    align-items: center;
    padding: 5px;

    button.mark-as-read {
      position: absolute;
      top: 5px;
      left: 8px;
      font-size: 13px;
    }

    div.search {
      position: relative;
      margin: 0;
      padding: 0;
      width: 50%;

      input[type=search] {
        margin: 0;
        width: 100%;
        height: 30px;
        border-radius: 4px;
        border-color: var(--pane-border-color);
        background-position: center left 8px;
        padding-inline-start: calc(var(--form-element-spacing-horizontal) + 16px);
        font-size: 14px;
      }

      button.clear {
        position: absolute;
        top: 0;
        right: 2px;

        width: 30px;
        height: 30px;

        opacity: 0.5;

        span.material-symbols {
          font-size: 16px;
        }

        &:hover {
          opacity: 1;
        }
      }
    }
  }

  >div.body {
    overflow-x: hidden;
    overflow-y: hidden;
  }

  .repost-header {
    display: flex;
    flex-direction: row;
    align-items: center;

    padding: 0 var(--block-spacing-horizontal);
    color: var(--muted-color);

    span.material-symbols {
      font-size: 1.2rem;
    }

    .repost-icon {
      padding-top: 1px;
    }

    a.reposted-in {
      margin-left: 4px;
      font-size: 0.8rem;
      color: var(--muted-color);
      text-decoration: underline;
    }

    address.reposter {
      margin: 0;
      margin-right: 10px;
      color: var(--muted-color);
      font-size: 0.8rem;

      img.node-icon {
        margin-right: 4px;
        width: 15px;
        height: 15px;
        border-radius: 3px;
      }
    }

    button.delete-repost {
      margin-left: 4px;
    }
  }

  .waiting-post {
    position: relative;
    border-bottom: 1px solid var(--pane-border-color);

    article.coto {
      padding: 2rem 0;
      opacity: 0.4;

      section.error {
        padding: 0 var(--block-spacing-horizontal);
        margin-bottom: 1rem;
        color: red;
        font-weight: 650;
      }
    }

    &::before {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      margin: auto;
      width: 24px;
      height: 24px;
    }
  }

  article.coto {
    position: relative;

    span.unread-mark {
      position: absolute;
      top: 8px;
      left: 8px;
      font-size: 10px;
      line-height: 10px;
    }
  }
}

